Finish static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Home") %>
 <h1>StaticPages Home</h1>
 <p>This is the home page
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
